--- a/WalletPayment.Services/WalletPayment.Services.csproj
+++ b/WalletPayment.Services/WalletPayment.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WalletPayment.Models\WalletPayment.Models.csproj" />
+    <ProjectReference Include="..\WalletPayment.Validation\WalletPayment.Validation.csproj" />
   </ItemGroup>
 
 </Project>
